openshift/templates/network-policies/emerald/allow-api-gateway-to-api.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name:  allow-dpia-api-gateway-to-api-egress
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: dpia-api-gateway
  egress:
    - ports:
        - protocol: TCP
          port: 3000
      to:
        - podSelector:
            matchLabels:
              strimzi.io/name: dpia-api
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dpia-api-gateway-to-api-ingress
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: dpia-api
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              strimzi.io/name: dpia-api-gateway
  policyTypes:
    - Ingress
