openshift/templates/network-policies/emerald/allow-api-to-psql.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name:  allow-dpia-api-to-psql-egress
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: dpia-api
  egress:
    - ports:
        - protocol: TCP
          port: 5432
      to:
        - podSelector:
            matchLabels:
              strimzi.io/name: postgresql
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dpia-api-to-psql-ingress
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: postgresql
  ingress:
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              strimzi.io/name: dpia-api
  policyTypes:
    - Ingress
