openshift/templates/network-policies/emerald/allow-from-nginx-build-to-proxy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-nginx-build-to-proxy
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      build: 'true'
  egress:
    - ports:
        - protocol: TCP
          port: 8080
      to:
        - ipBlock:
            cidr: 142.34.229.249/32
        - ipBlock:
            cidr: 142.34.94.249/32
  policyTypes:
    - Egress
---
