openshift/templates/network-policies/emerald/app-network-policy-template.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aa77ab-network-policy-app-egress
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: dpia-webapp
  egress:
    - ports:
        - protocol: TCP
          port: 8080
      to:
        - podSelector:
            matchLabels:
              strimzi.io/name: dpia-api
  policyTypes:
    - Egress
