openshift/templates/network-policies/emerald/postgres-network-policy-template.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aa77ab-network-policy-postgresql-ingress
  namespace: aa77ab-dev
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: postgresql
  ingress:
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              strimzi.io/name: dpia-api-artifactory
  policyTypes:
    - Ingress
